--- a/css/style.css
+++ b/css/style.css
@@ -558,6 +558,34 @@ img {
   display: block;
 }
 
-/* .first-footer-link {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}*/
+/* ===========FORM============== */
+.backdrop {
+  position: fixed;
+  top: 0;
+  background-color: rgba(30, 24, 35, 0.6);
+  width: 100%;
+  height: 100px;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+}
+.icon {
+}
+.modal-title {
+}
+.title {
+}
+.modal-form {
+}
+.modal-field {
+}
+.modal-label {
+}
+.modal-input-wrap {
+}
+.modal-input {
+}
+.modal-icon {
+}
