--- a/css/style.css
+++ b/css/style.css
@@ -564,10 +564,10 @@ img {
   top: 0;
   background-color: rgba(30, 24, 35, 0.6);
   width: 100%;
-  height: 100px;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+  height: 100%;
+  opacity: 0.5;
+  /* visibility: hidden;
+  pointer-events: none; */
 }
 .modal {
 }
