--- a/css/style.css
+++ b/css/style.css
@@ -558,7 +558,29 @@ img {
   display: block;
 }
 
+/* SUBSCRIBE */
+
+.footer-form {
+  width: 453px;
+  height: 80px;
+}
+.subsribe-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+.footer-form-btn {
+}
+.icon {
+}
+.footer-form {
+}
+
 /* ===========FORM============== */
+
 .backdrop {
   position: fixed;
   top: 0;
