--- a/css/style.css
+++ b/css/style.css
@@ -563,20 +563,57 @@ img {
 .footer-form {
   width: 453px;
   height: 80px;
+  padding-left: 80px;
+  padding-top: 100px;
+  display: flex;
 }
+.footer-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-button {
+  background-color: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 16px;
+  /*  */
+  border-radius: 4px;
+  padding: 8px 24px;
+  width: 165px;
+  height: 40px;
+}
+
 .subsribe-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+}
+
+/* .subsribe-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
   margin-bottom: 16px;
-}
+} */
+
 .footer-form-btn {
 }
-.icon {
+.icon-button-subscibe {
 }
 .footer-form {
+  display: flex;
+  gap: 8px;
 }
 
 /* ===========FORM============== */
