--- a/css/style.css
+++ b/css/style.css
@@ -558,20 +558,56 @@ img {
   display: block;
 }
 
-/* SUBSCRIBE */
+/* SUBSCRIBE 1*/
+.footer-text {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+}
 
 .footer-form {
+  display: flex;
+  gap: 24px;
+}
+.footer-input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.footer-input:placeholder {
+  color: #fff;
+}
+
+/* SUBSCRIBE 2*/
+
+/* .footer-form {
   width: 453px;
   height: 80px;
   padding-left: 80px;
   padding-top: 100px;
   display: flex;
+  align-items: top;
+  justify-content: center;
+  gap: 4px;
 }
+
 .footer-input {
-  border: 1px solid #fff;
-  border-radius: 4px;
   width: 264px;
   height: 40px;
+  border: 1px solid #fff;
+  border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
@@ -582,7 +618,8 @@ img {
   justify-content: center;
   flex-direction: row;
   gap: 16px;
-  /*  */
+
+  
   border-radius: 4px;
   padding: 8px 24px;
   width: 165px;
@@ -596,24 +633,11 @@ img {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
-}
-
-/* .subsribe-text {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #fff;
-  margin-bottom: 16px;
 } */
 
 .footer-form-btn {
 }
 .icon-button-subscibe {
-}
-.footer-form {
-  display: flex;
-  gap: 8px;
 }
 
 /* ===========FORM============== */
