--- a/css/style.css
+++ b/css/style.css
@@ -616,6 +616,11 @@ img {
   border-radius: 4px;
   padding: 8px 24px;
 }
+
+.icon {
+  margin-left: 16px;
+}
+
 /* SUBSCRIBE zero*/
 
 /* .footer-form {
