--- a/css/style.css
+++ b/css/style.css
@@ -610,11 +610,11 @@ img {
   color: #fff;
   cursor: pointer;
 
-  flex-direction: row;
+  /* flex-direction: row; */
   gap: 16px;
-
-  border-radius: 4px;
-  padding: 8px 24px;
+  border: none;
+  /* border-radius: 4px;
+  padding: 8px 24px; */
 }
 
 .icon {
