wrong move icons

--- a/css/style.css
+++ b/css/style.css
@@ -617,9 +617,9 @@ img {
   padding: 8px 24px; */
 }
 
-.footer-btn icon {
+/* .footer-btn icon {
   margin-left: 16px;
-}
+} */
 
 /* SUBSCRIBE zero*/
 
