add margin-left: 16px;

--- a/css/style.css
+++ b/css/style.css
@@ -617,11 +617,11 @@ img {
   padding: 8px 24px; */
 }
 
-/* .footer-btn icon {
+.footer-btn icon {
   margin-left: 16px;
-} */
+}
 
-/* SUBSCRIBE zero*/
+/* ===============SUBSCRIBE zero====================*/
 
 /* .footer-form {
   width: 453px;
