--- a/css/style.css
+++ b/css/style.css
@@ -571,6 +571,7 @@ img {
 .footer-form {
   display: flex;
   gap: 24px;
+  /* Change */
   width: 453px;
   height: 80px;
 }
@@ -678,15 +679,23 @@ img {
 .backdrop {
   position: fixed;
   top: 0;
-  background-color: rgba(46, 47, 66, 0.4);
   width: 100%;
   height: 100%;
   opacity: 0.5;
   visibility: hidden;
   pointer-events: none;
+  background-color: rgba(46, 47, 66, 0.4);
 }
+
 .modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 584px;
 }
+
 .icon {
 }
 .modal-title {
