--- a/css/style.css
+++ b/css/style.css
@@ -685,6 +685,8 @@ img {
   visibility: hidden;
   pointer-events: none;
   background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
