--- a/css/style.css
+++ b/css/style.css
@@ -558,7 +558,7 @@ img {
   display: block;
 }
 
-/* SUBSCRIBE 1*/
+/* ===== SUBSCRIBE 1 =====*/
 .footer-text {
   margin-bottom: 16px;
   font-weight: 500;
@@ -620,7 +620,7 @@ img {
   padding: 8px 24px; */
 }
 
-.footer-btn icon {
+.footer-btn .icon {
   margin-left: 16px;
 }
 
