--- a/css/style.css
+++ b/css/style.css
@@ -736,6 +736,9 @@ img {
   border: none;
 }
 
+.icon-modal {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .modal-title {
 }
 .title {
