--- a/css/style.css
+++ b/css/style.css
@@ -740,6 +740,11 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-close-btn:hover + .modal-icon,
+.modal-close-btn:focus + .modal-icon {
+  fill: #ffffff;
+}
+
 .modal-title {
 }
 .title {
