--- a/css/style.css
+++ b/css/style.css
@@ -753,6 +753,13 @@ img {
 }
 
 .modal-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 16px;
 }
 .title {
 }
