--- a/css/style.css
+++ b/css/style.css
@@ -769,6 +769,13 @@ img {
   margin-bottom: 8px;
 }
 .modal-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
 }
 .modal-input-wrap {
 }
