--- a/css/style.css
+++ b/css/style.css
@@ -778,8 +778,32 @@ img {
   margin-bottom: 4px;
 }
 .modal-input-wrap {
+  position: relative;
 }
+
 .modal-input {
+  border: 1px solid #4d5ae5;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+  border-color: #4d5ae5;
 }
 .modal-icon {
+}
+
+.modal-form-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-icon:focus {
+  fill: #4d5ae5;
 }
