--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,8 @@ a::after {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
+  /* (*1) */
+  margin-bottom: 8px;
 }
 
 .icon {
@@ -438,9 +440,13 @@ a::after {
 .portfolio-item {
   width: calc((100% - 48px) / 3);
   /*  */
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .overlay,
@@ -567,9 +573,13 @@ img {
   letter-spacing: 0.02em;
   color: #fff;
 }
-
+/* ====== Changes for repaire (1)====== */
+.footer-form-wrap {
+  margin-left: auto;
+}
 .footer-form {
   display: flex;
+
   gap: 24px;
   /* Change */
   /* width: 453px;
@@ -614,7 +624,8 @@ img {
   cursor: pointer;
 
   /* flex-direction: row; */
-  gap: 16px;
+  /* 1 */
+  /* gap: 16px; */
   border: none;
   /* border-radius: 4px;
   padding: 8px 24px; */
