--- a/css/style.css
+++ b/css/style.css
@@ -884,9 +884,10 @@ img {
 
 .modal-submit-btn {
   display: block;
+  margin: auto;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
