--- a/css/style.css
+++ b/css/style.css
@@ -652,7 +652,9 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* opacity: 1; */
   /* opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -719,7 +721,7 @@ img {
   background-color: #404bbf;
   border: none;
 }
-.icon-modal {
+.modal-icon-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
