--- a/css/style.css
+++ b/css/style.css
@@ -654,7 +654,9 @@ img {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* opacity: 1; */
+
+  /* =========HIDE=========== */
+  /* ------------------------ */
   /* opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -757,6 +759,7 @@ img {
 }
 .modal-input-wrap {
   position: relative;
+  /* outline: transparent; */
 }
 
 .modal-input {
@@ -766,7 +769,7 @@ img {
   height: 40px;
   padding-left: 38px;
   background-color: transparent;
-  /* outline: transparent; */
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
