--- a/css/style.css
+++ b/css/style.css
@@ -726,9 +726,9 @@ img {
 .modal-icon-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-close-btn:hover + .modal-icon,
-.modal-close-btn:focus + .modal-icon {
+/* repairing is here */
+.modal-close-btn:hover .modal-icon,
+.modal-close-btn:focus .modal-icon {
   fill: #ffffff;
 }
 
@@ -759,7 +759,6 @@ img {
 }
 .modal-input-wrap {
   position: relative;
-  /* outline: transparent; */
 }
 
 .modal-input {
