--- a/css/style.css
+++ b/css/style.css
@@ -727,8 +727,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* repairing is here */
-.modal-close-btn:hover .modal-icon,
-.modal-close-btn:focus .modal-icon {
+.modal-close-btn:hover + .modal-icon-close,
+.modal-close-btn:focus + .modal-icon-close {
   fill: #ffffff;
 }
 
