--- a/css/style.css
+++ b/css/style.css
@@ -787,7 +787,7 @@ img {
   border-radius: 4px;
   /* width: 360px; */
   height: 120px;
-  border-color: transparent;
+  /* border-color: transparent; */
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
