--- a/css/style.css
+++ b/css/style.css
@@ -839,7 +839,7 @@ img {
   color: #4d5ae5;
 }
 
-#user-privacy:checked .span-checkbox {
+#user-privacy:checked + label > .span-checkbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
