--- a/css/style.css
+++ b/css/style.css
@@ -868,6 +868,7 @@ img {
   /*  */
   font-family: "Roboto", sans-serif;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 /*  */
 /*  */
