--- a/css/style.css
+++ b/css/style.css
@@ -884,6 +884,10 @@ img {
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-icon:focus {
+/* .modal-form-icon:focus {
+  fill: #4d5ae5;
+} */
+
+#user-name:focus > .modal-form-icon {
   fill: #4d5ae5;
 }
