--- a/css/style.css
+++ b/css/style.css
@@ -751,7 +751,8 @@ img {
 .modal-form {
 }
 .modal-field {
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
+  margin-bottom: 16px;
 }
 .modal-label {
   font-weight: 400;
