--- a/css/style.css
+++ b/css/style.css
@@ -645,14 +645,18 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
-  /* =========HIDE=========== */
-  /* ------------------------ */
-  /* opacity: 0;
+  /* This is important */
+  visibility: hidden;
+  pointer-events: none;
+}
+/* =========HIDE=========== */
+/* ------------------------ */
+/* opacity: 0;
   visibility: hidden;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-}
+
 /* is open */
 .backdrop .is-open {
   opacity: 1;
