--- a/css/style.css
+++ b/css/style.css
@@ -658,7 +658,7 @@ img {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 
 /* is open */
-.backdrop .is-open {
+.backdrop.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
@@ -888,6 +888,10 @@ img {
   fill: #4d5ae5;
 } */
 
-#user-name:focus + .modal-form-icon {
+/* #user-name:focus + .modal-form-icon {
+  fill: #4d5ae5;
+} */
+
+.modal-input:focus + .modal-form-icon {
   fill: #4d5ae5;
 }
